# legco-search-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  CLOUDFLARE_DEPLOYMENT.md  README.md  example_usage.py  opencode.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_server.py  tsconfig.json  vitest.config.ts  wrangler.toml
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  design_patterns_guidelines.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
.specify/memory/: constitution.md
.wrangler/tmp/bundle-0tk5fh/: middleware-loader.entry.ts
.wrangler/tmp/dev-RUSCi2/: worker.js  worker.js.map
specs/001-update-this-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: worker.ts
src/auth/: oauth.ts
src/legco_search_mcp/: __init__.py  server.py
src/logging/: enhanced-logging.ts
src/models/: client-compatibility.ts  mcp-version.ts  performance-metrics.ts  server-configuration.ts
src/state/: durable-objects.ts
src/tools/: progress-notifications.ts  resource-subscriptions.ts  tool-definitions.ts
tests/contract/: test-health-check.js  test-mcp-initialize.js  test-version-info.js
tests/e2e/: test-mcp-protocol-compliance.ts
tests/integration/: test-oauth-flow.js  test-protocol-negotiation.js  test-transport-compatibility.js
tests/performance/: test-health-check-performance.ts
tests/unit/: test-client-compatibility.ts  test-mcp-version.ts  test-performance-metrics.ts  test-server-configuration.ts
(+12 files in other folders)
