[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legco-search-mcp"
version = "0.1.0"
description = "MCP server for Hong Kong Legislative Council (LegCo) open data APIs"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
legco-search-mcp = "legco_search_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
